--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,12 @@
 {
   "name": "server",
   "module": "index.ts",
-  "type": "module",
-  "private": true,
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
-  "dependencies": {
-    "yaml": "^2.8.2"
-  }
+  "private": true,
+  "type": "module"
 }
