Add tests for server

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "server",
   "module": "src/index.ts",
   "scripts": {
-    "start": "bun run src/index.ts"
+    "start": "bun run src/index.ts",
+    "test": "bun test"
   },
   "devDependencies": {
     "@types/bun": "latest"
