Simplify the POST /reponses and fix the parsing bug

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "module": "src/index.ts",
     "scripts": {
         "start": "bun run src/index.ts",
+        "dev": "bun run --watch src/index.ts",
         "test": "bun test",
         "format": "prettier --write ."
     },
